--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,7 @@ h6 {
     color: #777
 }
 
-.text-primary,
-a {
-    color:
-}
+
 
 p {
     font-size: 14px;
@@ -192,7 +189,7 @@ header {
 
 
 section {
-    padding: 100px 0
+    padding: 75px 0;
 }
 
 section h2.section-heading {
@@ -216,7 +213,7 @@ section h3.section-subheading {
 
 @media (min-width:768px) {
     section {
-        padding: 150px 0
+        padding-top: 30px;
     }
 }
 
@@ -438,19 +435,23 @@ footer ul.quicklinks {
 }
 
 .datenschutz-h4{
-
-    margin-bottom: 22px;
+    margin-top: 22px;
 }
 
 section#contact {
     background-color: #222;
     background-position: center;
+    height: 100vh;
 }
 
 
 footer {
-    padding: 25px 0;
-    text-align: center
+    bottom: 0;
+    width: 100%;
+    /* height: 70px; */
+    background-color: white;
+    position: fixed;
+    z-index: 900;
 }
 
 footer span.copyright {
@@ -462,16 +463,26 @@ footer span.copyright {
 
 @media (min-width:768px) {
         .datenschutz-h4 {
-
-            margin-bottom: 22px;
+            margin-top: 30px;
         }
         .datenschutz{
-            padding: 5px;
-            text-align: justify;
+          padding-left: 25px;
+          padding-right: 25px;
+          text-align: justify;
         }
 }
 
 .datenschutz{
-    
+
     text-align: justify;
+}
+.kontakt{
+    margin-top: 70px;
+}
+.margin-footer-a{
+    margin-left: 5px;
+    margin-right:5px;
+}
+.margin-top{
+    margin-top: 10px;
 }
